<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/sw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:checked="true"
            android:text="@string/sw_color"
            android:textColor="@color/colorGreen" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorWhite"
            app:srcCompat="@mipmap/aniya" />

        <LinearLayout
            android:layout_width="459dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="46dp"
                android:layout_marginBottom="30dp"

                android:ems="10"
                android:hint="@string/edit_message"
                android:inputType="textPersonName"
                android:textColor="@color/colorGold"
                android:textColorHint="@color/colorGold" />

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="30dp"
                android:text="@string/button_send"
                android:textColor="@color/colorGold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@android:dimen/app_icon_size"
            android:text=" "
            android:textColor="@color/colorPink" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@android:dimen/app_icon_size"
            android:layout_marginTop="@android:dimen/app_icon_size" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choice3_1"
            android:textColor="@color/colorGreen" />

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Android"
            android:textColor="@color/colorGreen" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/IOS"
            android:textColor="@color/colorGreen" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/WP"
            android:textColor="@color/colorGreen" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>